Fixed the scoring display to be more visible.

--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -35,6 +35,21 @@
     color: #888;
 }
 
+.score-text-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.score-text {
+    background-color: #f2b4bf;
+    color: #fff7f1;
+    margin: 20px;
+    padding: 10px;
+    font-size: 1.1rem;
+    width: 500px;
+    max-width: 500px;
+}
+
 .about-game-wrapper {
     display: flex;
     flex-direction: column;
